# mquickjs-rs

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CLAUDE.zh.md  Cargo.toml  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN.zh.md  README.md  README.zh.md  WORKLINE.md  diagnose_memory.md  justfile
.claude/: settings.json  settings.local.json
.github/workflows/: bench.yml
.planning/: ROADMAP.md
benches/: LATEST_RESULTS.md  compare.sh  js_benchmarks.rs  run_canaries.sh  update_criterion_results.sh
benches/drivers/: bench_exec_helper.c  bench_exec_helper.rs  criterion_benchmarks.rs  update_latest_results.py
benches/manifests/: benchmark_tiers.txt  canary_benchmarks.txt  execution_mem_sizes.txt
benches/scripts/: deep_property.js  dense_array_bool_condition_only_hot.js  dense_array_bool_condition_only_hot_arg0.js  dense_array_bool_condition_only_hot_local1.js  dense_array_bool_read_branch.js  dense_array_bool_read_hot.js  dense_array_false_write_only.js  dense_array_false_write_then_read_hot.js  dense_array_loop_only_hot.js  dense_array_read_only_hot.js  dense_array_read_only_hot_arg0.js  dense_array_read_only_hot_local1.js  fib_iter.js  for_in_object.js  for_of_array.js  json_parse_only.js  json_parse_property_read.js  method_chain.js  switch_case.js  (+4 more)
docs/: BENCHMARK_ANALYSIS.md  BENCHMARK_ANALYSIS.zh.md  BUG_AUDIT_REPORT.md  DUAL_MEMORY_ARCHITECTURE.md  EFFECT_ENGINE_API.md  EMBEDDED_NO_STD.md  ENGINE_OPTIMIZATION_TASKLIST.md  ENGINE_OPTIMIZATION_TASKLIST.zh.md  GC_PROGRESS.md  HOW_IT_WORKS.md  JS_FEATURE_SPEC.md  LED_PROFILE.md  NUMERIC_AUDIT_TODO.md  PRODUCT_ROADMAP.md  PROJECT_STRUCTURE.md  WORKSPACE_SPLIT_PLAN.md
examples/: effects_demo_engine.rs  effects_demo_manager.rs  effects_egui.rs
led-runtime/: Cargo.toml
src/: context.rs  effect.rs  lib.rs  value.rs
tests/: compiler_tests.rs  effect_api.rs  effects_engine_helper.rs  error_messages.rs  eval_integration.rs  gc_tests.rs  lexer_tests.rs  runtime_tests.rs  stack_opcode_tests.rs  util_tests.rs  value_tests.rs  vm_tests.rs
(+88 files in other folders)
