[package]
name = "mquickjs-rs"
version = "0.1.0"
edition = "2021"
authors = ["MQuickJS Rust Port"]
description = "A Rust port of MQuickJS - Fabrice Bellard's minimalist JavaScript engine"
license = "MIT"
repository = "https://github.com/user/mquickjs-rs"
keywords = ["javascript", "interpreter", "embedded", "js-engine"]
categories = ["parser-implementations", "compilers"]

[lib]
name = "mquickjs"
path = "src/lib.rs"

[[bin]]
name = "mqjs"
path = "src/bin/mqjs.rs"
required-features = ["std"]

[dependencies]
regex = { version = "1", optional = true }
rustyline = { version = "14", optional = true }
libm = "0.2"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "js_benchmarks"
harness = false

[profile.release]
opt-level = 3
lto = true

[features]
default = ["std"]
std = ["regex", "rustyline"]
# Enable debug dumps (bytecode, GC, etc.)
dump = []
# Enable debug GC that moves objects on every allocation
debug-gc = []
